// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingCard Molecule tests should render SettingCard correctly 1`] = `
<DocumentFragment>
  .c3 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  margin-bottom: 1.25rem;
  font-family: 'Roboto',sans-serif;
  color: #000000;
}

.c6 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  margin-right: 0.75rem;
  font-family: 'Roboto',sans-serif;
  color: #757575;
}

.c2 {
  font-size: 1.125rem;
  line-height: 1.625rem;
  font-weight: 500;
  margin-bottom: 0.25rem;
  font-family: 'Roboto',sans-serif;
  color: #000000;
}

.c7 {
  border: none;
  height: 2.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: #000000;
  color: #FFFFFF;
  margin-left: auto;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c7:hover:not(:active) {
  background-color: #333;
}

.c7 .material-symbols-sharp {
  color: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-shadow: rgba(0,0,0,0.1) 0px 1px 3px 0px,rgba(0,0,0,0.06) 0px 1px 2px 0px;
  background-color: #FFFFFF;
  border-radius: 0.375rem;
}

.c4 {
  height: 1px;
  border: none;
  background-color: #EEEEEE;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1.25rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem 1.25rem;
}

<div
    class="c0"
    data-testid="card"
  >
    <div
      class="c1"
    >
      <h3
        class="c2"
        data-testid="setting-title"
      >
        title
      </h3>
      <p
        class="c3"
        data-testid="setting-title"
      >
        description
      </p>
      <div>
        renders correctly
      </div>
    </div>
    <hr
      class="c4"
      data-testid="horizontal-rule"
    />
    <div
      class="c5"
    >
      <p
        class="c6"
        data-testid="setting-title"
      />
      <button
        class="c7"
      >
        button
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SettingCard Molecule tests should render SettingCard with Input as children 1`] = `
<DocumentFragment>
  .c3 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  margin-bottom: 1.25rem;
  font-family: 'Roboto',sans-serif;
  color: #000000;
}

.c8 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  margin-right: 0.75rem;
  font-family: 'Roboto',sans-serif;
  color: #757575;
}

.c2 {
  font-size: 1.125rem;
  line-height: 1.625rem;
  font-weight: 500;
  margin-bottom: 0.25rem;
  font-family: 'Roboto',sans-serif;
  color: #000000;
}

.c9 {
  border: none;
  height: 2.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: #000000;
  color: #FFFFFF;
  margin-left: auto;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c9:hover:not(:active) {
  background-color: #333;
}

.c9 .material-symbols-sharp {
  color: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-shadow: rgba(0,0,0,0.1) 0px 1px 3px 0px,rgba(0,0,0,0.06) 0px 1px 2px 0px;
  background-color: #FFFFFF;
  border-radius: 0.375rem;
}

.c6 {
  height: 1px;
  border: none;
  background-color: #EEEEEE;
  width: 100%;
}

.c4 {
  max-width: 400px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  border: none;
  background-color: #F6F6F6;
  height: 2.75rem;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  font-weight: 400;
  width: 100%;
  padding: 0 1rem;
  color: #757575;
}

.c5:focus {
  outline: 2px solid #000000;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1.25rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem 1.25rem;
}

<div
    class="c0"
    data-testid="card"
  >
    <div
      class="c1"
    >
      <h3
        class="c2"
        data-testid="setting-title"
      >
        title
      </h3>
      <p
        class="c3"
        data-testid="setting-title"
      >
        description
      </p>
      <div
        class="c4"
        data-testid="input-container"
      >
        <input
          class="c5"
          data-testid="input"
          format="normal"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <hr
      class="c6"
      data-testid="horizontal-rule"
    />
    <div
      class="c7"
    >
      <p
        class="c8"
        data-testid="setting-title"
      >
        text
      </p>
      <button
        class="c9"
      >
        button
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SettingCard Molecule tests should render SettingCard with text 1`] = `
<DocumentFragment>
  .c3 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  margin-bottom: 1.25rem;
  font-family: 'Roboto',sans-serif;
  color: #000000;
}

.c6 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  margin-right: 0.75rem;
  font-family: 'Roboto',sans-serif;
  color: #757575;
}

.c2 {
  font-size: 1.125rem;
  line-height: 1.625rem;
  font-weight: 500;
  margin-bottom: 0.25rem;
  font-family: 'Roboto',sans-serif;
  color: #000000;
}

.c7 {
  border: none;
  height: 2.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: #000000;
  color: #FFFFFF;
  margin-left: auto;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c7:hover:not(:active) {
  background-color: #333;
}

.c7 .material-symbols-sharp {
  color: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-shadow: rgba(0,0,0,0.1) 0px 1px 3px 0px,rgba(0,0,0,0.06) 0px 1px 2px 0px;
  background-color: #FFFFFF;
  border-radius: 0.375rem;
}

.c4 {
  height: 1px;
  border: none;
  background-color: #EEEEEE;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1.25rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem 1.25rem;
}

<div
    class="c0"
    data-testid="card"
  >
    <div
      class="c1"
    >
      <h3
        class="c2"
        data-testid="setting-title"
      >
        title
      </h3>
      <p
        class="c3"
        data-testid="setting-title"
      >
        description
      </p>
      <div>
        renders with text
      </div>
    </div>
    <hr
      class="c4"
      data-testid="horizontal-rule"
    />
    <div
      class="c5"
    >
      <p
        class="c6"
        data-testid="setting-title"
      >
        text
      </p>
      <button
        class="c7"
      >
        button
      </button>
    </div>
  </div>
</DocumentFragment>
`;
